app/main/default/objects/FlosumBackup__Restore__c/fields/FlosumBackup__Destination_Org_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Destination_Org_Id__c</fullName>
        <label>Destination Org Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
</CustomObject>