app/main/default/objects/FlosumBackup__Restore__c/fields/FlosumBackup__Status__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
</CustomObject>