app/main/default/objects/FlosumBackup__Restore__c/fields/FlosumBackup__Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>